--- a/cv.qmd
+++ b/cv.qmd
@@ -47,4 +47,4 @@ title: "Curriculum Vitae"
 5. Achiever - I You work hard and possess a great deal of stamina. I take immense satisfaction in being busy and productive.
 
 
-👉 You can also [download my full CV (PDF)](Eftim_Popovski_CV_eng.pdf).
+👉 You can also [download my full CV (PDF)](Eftim_Popovski_CV_eng_neu.pdf).
